making huge changes, read the proj specs wrong on some parts, sigh

--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -25,6 +25,16 @@ div.center {
 	text-align: center;
 }
 
+#prod_search {
+	width: 140px;
+	position: absolute;
+	left: 10px;
+}
+
+#prod_search ul {
+	list-style: none;
+}
+
 
 /******signUp.jsp*****/
 #shift {
