--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -22,6 +22,15 @@ div.large-4 a {
 	color: white;
 }
 
+#signLink {
+	position: relative;
+	top:1px;
+}
+
+#signLink a {
+	color: white;
+}
+
 #cart {
 	width: 45px;
 }
