All pages ready, I also made the drop down column smaller to accomadate more columns, but I am not sure if it will fit still, will have to check when we start using the data generator. salesanalytics.jsp is the main page, and salesanalyticsnext.jsp is the jsp for every subsequent "next10/20" the user clicks.

--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -61,11 +61,46 @@ div.center {
 }
 
 #shift form{
-	width: 500px;
-	
+	width: 200px;
+}
+
+#left-box {
+	width: 200px;
+	float: left;
+}
+
+#right-box {
+	width: 705px;
+	float: right;
+}
+
+#footer {
+	clear: both;
+}
+
+.panel {
+	min-height: 500px;
+}
+
+.divide {
+	clear: both;
 }
 
 
+#next-btns form{
+	width: 200px;
+}
+
+#next20 {
+	position: relative;
+	left: 800px;
+	top: -15px;
+}
+
+#next10 {
+	position: relative;
+	left: 800px;
+}
 
 /*index.html*/
 .fill {
