--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -110,11 +110,13 @@ div.center {
 
 td {
 	text-align: center;
+	width: 50px;
 }
 
 table {
-	width: 90%;
+	width: 100%
 }
+
 
 .bold {
 	font-weight: bold;
